// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FinderItem Drag & drop should match snapshot if dragEnabled is \`true\` 1`] = `
<div role="button" draggable="true" class="item draggable">
  <!---->
  <!---->
  <div item="[object Object]" class="inner-item"></div>
  <div class="arrow"></div>
</div>
`;

exports[`FinderItem Expand should match snapshot if expanded 1`] = `
<div role="button" draggable="false" aria-expanded="true" class="item expanded">
  <!---->
  <!---->
  <div item="[object Object]" class="inner-item"></div>
  <div class="arrow"></div>
</div>
`;

exports[`FinderItem Selection should match snapshot if selectable 1`] = `
<div role="button" draggable="false" class="item">
  <!----> <input type="checkbox">
  <div item="[object Object]" class="inner-item"></div>
  <div class="arrow"></div>
</div>
`;

exports[`FinderItem should match snapshot 1`] = `
<div role="button" draggable="false" class="item">
  <!---->
  <!---->
  <div item="[object Object]" class="inner-item"></div>
  <div class="arrow"></div>
</div>
`;
